--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,12 +8,12 @@ language:
 rmd_files:
   - index.Rmd
   - 01_baseline_characteristics.Rmd
-  #- 02_descriptive_statistics.Rmd
+  - 02_descriptive_statistics.Rmd
+  - 07_subgroup_estimates.Rmd
+  - 06_exploratory_outcomes.Rmd
+  - 08_milq_adequecy.Rmd
   - 04_forest_plots.Rmd
   - 05_forest_plots_unadjusted.Rmd
-  - 06_exploratory_outcomes.Rmd
-  - 07_subgroup_estimates.Rmd
-  - 08_milq_adequecy.Rmd
   - 09_forest_plots_unscaled.Rmd
   - 10_trajectory_plots.Rmd
   #- 11_pathway_analysis_tables.Rmd
